PegSolitaire.ts is a working module. First attempt to make a WebWorker with modules failed (WIP).

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": 2 //Means error,
+    "prettier/prettier": "error",
+    "curly": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
