--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-.bundle
-.c9revisions
-log/*.log
-tmp/
-.rvmrc
-static/tsbuild/
-node_modules/
-.vscode/
+.vscode
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
