--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "resta1",
+  "name": "peg-solitaire-ga",
   "version": "2.0.0",
+  "private": true,
   "description": "A web peg solitaire game with genetic algorithm solver",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "http-server -p 8000 .",
-    "lint": "eslint src/",
-    "lint-clean": "clear; eslint --fix",
-    "lint-watch": "onchange '**/*.ts' -- npm run lint-clean {{changed}}",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "tsc": "tsc -w",
-    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rodvlopes/resta1.git"
-  },
+  "author": "rodvlopes",
+  "license": "ISC",
   "keywords": [
     "peg",
     "solitaire",
@@ -24,22 +12,56 @@
     "algorithm",
     "solver"
   ],
-  "author": "rodvlopes",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/rodvlopes/resta1/issues"
   },
-  "homepage": "https://github.com/rodvlopes/resta1#readme",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/",
+    "lint-clean": "clear; eslint --fix",
+    "lint-watch": "onchange '**/*.ts' -- npm run lint-clean {{changed}}",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
+    "d3": "^7.4.4",
     "eslint": "^8.16.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.7.2",
+    "web-vitals": "^2.1.4"
+  },
+  "browserslist": {
+    "production": [
+      "last 10 chrome version",
+      "last 8 firefox version",
+      "last 2 safari version"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "http-server": "^14.1.0",
-    "jest": "^28.1.0",
-    "onchange": "^7.1.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.7.2"
+    "prettier": "^2.6.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^d3$": "<rootDir>/node_modules/d3/dist/d3.min.js"
+    }
   }
 }
