--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo.svg",
-      "type": "image/svg+xml",
-      "sizes": "any"
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
