PWA mode enabled with serviceWorker/Workbox

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
+  "background_color": "#282c34",
   "offline_enabled": true
 }
